--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Security Portfolio</title>
-    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <title>Security Portfolio</title>
+  <base href="/" />
 
-  <body class="mat-app-background">
-    <app-root></app-root>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Taprom" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
+
+<body class="mat-app-background">
+  <app-root></app-root>
+</body>
+
 </html>
